c6/y.output
Terminals unused in grammar

   ARRAY


State 94 conflicts: 1 shift/reduce
State 96 conflicts: 1 shift/reduce
State 98 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: function

    2 definition: VARIABLE '(' arguments ')' '{' stmt_list '}'
    3           | VARIABLE '(' ')' '{' stmt_list '}'

    4 function: function stmt
    5         | function definition
    6         | %empty

    7 stmt: ';'
    8     | expr ';'
    9     | RETURN expr ';'
   10     | BREAK ';'
   11     | CONTINUE ';'
   12     | input ';'
   13     | output ';'
   14     | VARIABLE '=' expr ';'
   15     | '@' VARIABLE '=' expr ';'
   16     | FOR '(' stmt stmt stmt ')' stmt
   17     | WHILE '(' expr ')' stmt
   18     | DO stmt WHILE '(' expr ')'
   19     | IF '(' expr ')' stmt
   20     | IF '(' expr ')' stmt ELSE stmt
   21     | '{' stmt_list '}'

   22 stmt_list: stmt
   23          | stmt_list stmt

   24 arguments: arguments ',' expr
   25          | expr

   26 input: READ VARIABLE
   27      | GETI '(' arguments ')'
   28      | GETC '(' arguments ')'
   29      | GETS '(' arguments ')'

   30 output: PRINT expr
   31       | PUTI '(' arguments ')'
   32       | PUTI '(' STRING ',' arguments ')'
   33       | PUTC '(' arguments ')'
   34       | PUTC '(' STRING ',' arguments ')'
   35       | PUTS '(' arguments ')'
   36       | PUTS '(' STRING ',' arguments ')'
   37       | PUTI_ '(' arguments ')'
   38       | PUTC_ '(' arguments ')'
   39       | PUTS_ '(' arguments ')'

   40 expr: INTEGER
   41     | CHAR
   42     | STRING
   43     | VARIABLE
   44     | '@' VARIABLE
   45     | '-' expr
   46     | expr '+' expr
   47     | expr '-' expr
   48     | expr '*' expr
   49     | expr '%' expr
   50     | expr '/' expr
   51     | expr '<' expr
   52     | expr '>' expr
   53     | expr GE expr
   54     | expr LE expr
   55     | expr NE expr
   56     | expr EQ expr
   57     | expr AND expr
   58     | expr OR expr
   59     | '(' expr ')'
   60     | VARIABLE '(' arguments ')'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 49
'(' (40) 2 3 16 17 18 19 20 27 28 29 31 32 33 34 35 36 37 38 39 59
    60
')' (41) 2 3 16 17 18 19 20 27 28 29 31 32 33 34 35 36 37 38 39 59
    60
'*' (42) 48
'+' (43) 46
',' (44) 24 32 34 36
'-' (45) 45 47
'/' (47) 50
';' (59) 7 8 9 10 11 12 13 14 15
'<' (60) 51
'=' (61) 14 15
'>' (62) 52
'@' (64) 15 44
'{' (123) 2 3 21
'}' (125) 2 3 21
error (256)
INTEGER (258) 40
VARIABLE (259) 2 3 14 15 26 43 44 60
CHAR (260) 41
STRING (261) 32 34 36 42
FOR (262) 16
WHILE (263) 17 18
IF (264) 19 20
PRINT (265) 30
READ (266) 26
DO (267) 18
BREAK (268) 10
CONTINUE (269) 11
ARRAY (270)
RETURN (271) 9
GETI (272) 27
GETC (273) 28
GETS (274) 29
PUTI (275) 31 32
PUTC (276) 33 34
PUTS (277) 35 36
PUTI_ (278) 37
PUTC_ (279) 38
PUTS_ (280) 39
STRINGX (281)
IFX (282)
ELSE (283) 20
AND (284) 57
OR (285) 58
GE (286) 53
LE (287) 54
EQ (288) 56
NE (289) 55
UMINUS (290)


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1, on right: 0
definition (53)
    on left: 2 3, on right: 5
function (54)
    on left: 4 5 6, on right: 1 4 5
stmt (55)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21, on right: 4
    16 17 18 19 20 22 23
stmt_list (56)
    on left: 22 23, on right: 2 3 21 23
arguments (57)
    on left: 24 25, on right: 2 24 27 28 29 31 32 33 34 35 36 37 38
    39 60
input (58)
    on left: 26 27 28 29, on right: 12
output (59)
    on left: 30 31 32 33 34 35 36 37 38 39, on right: 13
expr (60)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58 59 60, on right: 8 9 14 15 17 18 19 20 24 25 30 45 46 47 48
    49 50 51 52 53 54 55 56 57 58 59


State 0

    0 $accept: . program $end

    $default  reduce using rule 6 (function)

    program   go to state 1
    function  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: function .
    4 function: function . stmt
    5         | function . definition

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 5
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 7
    FOR       shift, and go to state 8
    WHILE     shift, and go to state 9
    IF        shift, and go to state 10
    PRINT     shift, and go to state 11
    READ      shift, and go to state 12
    DO        shift, and go to state 13
    BREAK     shift, and go to state 14
    CONTINUE  shift, and go to state 15
    RETURN    shift, and go to state 16
    GETI      shift, and go to state 17
    GETC      shift, and go to state 18
    GETS      shift, and go to state 19
    PUTI      shift, and go to state 20
    PUTC      shift, and go to state 21
    PUTS      shift, and go to state 22
    PUTI_     shift, and go to state 23
    PUTC_     shift, and go to state 24
    PUTS_     shift, and go to state 25
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '{'       shift, and go to state 28
    ';'       shift, and go to state 29
    '@'       shift, and go to state 30

    $default  reduce using rule 1 (program)

    definition  go to state 31
    stmt        go to state 32
    input       go to state 33
    output      go to state 34
    expr        go to state 35


State 3

    0 $accept: program $end .

    $default  accept


State 4

   40 expr: INTEGER .

    $default  reduce using rule 40 (expr)


State 5

    2 definition: VARIABLE . '(' arguments ')' '{' stmt_list '}'
    3           | VARIABLE . '(' ')' '{' stmt_list '}'
   14 stmt: VARIABLE . '=' expr ';'
   43 expr: VARIABLE .
   60     | VARIABLE . '(' arguments ')'

    '('  shift, and go to state 36
    '='  shift, and go to state 37

    $default  reduce using rule 43 (expr)


State 6

   41 expr: CHAR .

    $default  reduce using rule 41 (expr)


State 7

   42 expr: STRING .

    $default  reduce using rule 42 (expr)


State 8

   16 stmt: FOR . '(' stmt stmt stmt ')' stmt

    '('  shift, and go to state 38


State 9

   17 stmt: WHILE . '(' expr ')' stmt

    '('  shift, and go to state 39


State 10

   19 stmt: IF . '(' expr ')' stmt
   20     | IF . '(' expr ')' stmt ELSE stmt

    '('  shift, and go to state 40


State 11

   30 output: PRINT . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 41
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 7
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '@'       shift, and go to state 42

    expr  go to state 43


State 12

   26 input: READ . VARIABLE

    VARIABLE  shift, and go to state 44


State 13

   18 stmt: DO . stmt WHILE '(' expr ')'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 45
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 7
    FOR       shift, and go to state 8
    WHILE     shift, and go to state 9
    IF        shift, and go to state 10
    PRINT     shift, and go to state 11
    READ      shift, and go to state 12
    DO        shift, and go to state 13
    BREAK     shift, and go to state 14
    CONTINUE  shift, and go to state 15
    RETURN    shift, and go to state 16
    GETI      shift, and go to state 17
    GETC      shift, and go to state 18
    GETS      shift, and go to state 19
    PUTI      shift, and go to state 20
    PUTC      shift, and go to state 21
    PUTS      shift, and go to state 22
    PUTI_     shift, and go to state 23
    PUTC_     shift, and go to state 24
    PUTS_     shift, and go to state 25
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '{'       shift, and go to state 28
    ';'       shift, and go to state 29
    '@'       shift, and go to state 30

    stmt    go to state 46
    input   go to state 33
    output  go to state 34
    expr    go to state 35


State 14

   10 stmt: BREAK . ';'

    ';'  shift, and go to state 47


State 15

   11 stmt: CONTINUE . ';'

    ';'  shift, and go to state 48


State 16

    9 stmt: RETURN . expr ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 41
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 7
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '@'       shift, and go to state 42

    expr  go to state 49


State 17

   27 input: GETI . '(' arguments ')'

    '('  shift, and go to state 50


State 18

   28 input: GETC . '(' arguments ')'

    '('  shift, and go to state 51


State 19

   29 input: GETS . '(' arguments ')'

    '('  shift, and go to state 52


State 20

   31 output: PUTI . '(' arguments ')'
   32       | PUTI . '(' STRING ',' arguments ')'

    '('  shift, and go to state 53


State 21

   33 output: PUTC . '(' arguments ')'
   34       | PUTC . '(' STRING ',' arguments ')'

    '('  shift, and go to state 54


State 22

   35 output: PUTS . '(' arguments ')'
   36       | PUTS . '(' STRING ',' arguments ')'

    '('  shift, and go to state 55


State 23

   37 output: PUTI_ . '(' arguments ')'

    '('  shift, and go to state 56


State 24

   38 output: PUTC_ . '(' arguments ')'

    '('  shift, and go to state 57


State 25

   39 output: PUTS_ . '(' arguments ')'

    '('  shift, and go to state 58


State 26

   45 expr: '-' . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 41
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 7
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '@'       shift, and go to state 42

    expr  go to state 59


State 27

   59 expr: '(' . expr ')'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 41
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 7
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '@'       shift, and go to state 42

    expr  go to state 60


State 28

   21 stmt: '{' . stmt_list '}'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 45
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 7
    FOR       shift, and go to state 8
    WHILE     shift, and go to state 9
    IF        shift, and go to state 10
    PRINT     shift, and go to state 11
    READ      shift, and go to state 12
    DO        shift, and go to state 13
    BREAK     shift, and go to state 14
    CONTINUE  shift, and go to state 15
    RETURN    shift, and go to state 16
    GETI      shift, and go to state 17
    GETC      shift, and go to state 18
    GETS      shift, and go to state 19
    PUTI      shift, and go to state 20
    PUTC      shift, and go to state 21
    PUTS      shift, and go to state 22
    PUTI_     shift, and go to state 23
    PUTC_     shift, and go to state 24
    PUTS_     shift, and go to state 25
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '{'       shift, and go to state 28
    ';'       shift, and go to state 29
    '@'       shift, and go to state 30

    stmt       go to state 61
    stmt_list  go to state 62
    input      go to state 33
    output     go to state 34
    expr       go to state 35


State 29

    7 stmt: ';' .

    $default  reduce using rule 7 (stmt)


State 30

   15 stmt: '@' . VARIABLE '=' expr ';'
   44 expr: '@' . VARIABLE

    VARIABLE  shift, and go to state 63


State 31

    5 function: function definition .

    $default  reduce using rule 5 (function)


State 32

    4 function: function stmt .

    $default  reduce using rule 4 (function)


State 33

   12 stmt: input . ';'

    ';'  shift, and go to state 64


State 34

   13 stmt: output . ';'

    ';'  shift, and go to state 65


State 35

    8 stmt: expr . ';'
   46 expr: expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '%' expr
   50     | expr . '/' expr
   51     | expr . '<' expr
   52     | expr . '>' expr
   53     | expr . GE expr
   54     | expr . LE expr
   55     | expr . NE expr
   56     | expr . EQ expr
   57     | expr . AND expr
   58     | expr . OR expr

    AND  shift, and go to state 66
    OR   shift, and go to state 67
    GE   shift, and go to state 68
    LE   shift, and go to state 69
    EQ   shift, and go to state 70
    NE   shift, and go to state 71
    '>'  shift, and go to state 72
    '<'  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '%'  shift, and go to state 78
    ';'  shift, and go to state 79


State 36

    2 definition: VARIABLE '(' . arguments ')' '{' stmt_list '}'
    3           | VARIABLE '(' . ')' '{' stmt_list '}'
   60 expr: VARIABLE '(' . arguments ')'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 41
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 7
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    ')'       shift, and go to state 80
    '@'       shift, and go to state 42

    arguments  go to state 81
    expr       go to state 82


State 37

   14 stmt: VARIABLE '=' . expr ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 41
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 7
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '@'       shift, and go to state 42

    expr  go to state 83


State 38

   16 stmt: FOR '(' . stmt stmt stmt ')' stmt

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 45
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 7
    FOR       shift, and go to state 8
    WHILE     shift, and go to state 9
    IF        shift, and go to state 10
    PRINT     shift, and go to state 11
    READ      shift, and go to state 12
    DO        shift, and go to state 13
    BREAK     shift, and go to state 14
    CONTINUE  shift, and go to state 15
    RETURN    shift, and go to state 16
    GETI      shift, and go to state 17
    GETC      shift, and go to state 18
    GETS      shift, and go to state 19
    PUTI      shift, and go to state 20
    PUTC      shift, and go to state 21
    PUTS      shift, and go to state 22
    PUTI_     shift, and go to state 23
    PUTC_     shift, and go to state 24
    PUTS_     shift, and go to state 25
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '{'       shift, and go to state 28
    ';'       shift, and go to state 29
    '@'       shift, and go to state 30

    stmt    go to state 84
    input   go to state 33
    output  go to state 34
    expr    go to state 35


State 39

   17 stmt: WHILE '(' . expr ')' stmt

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 41
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 7
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '@'       shift, and go to state 42

    expr  go to state 85


State 40

   19 stmt: IF '(' . expr ')' stmt
   20     | IF '(' . expr ')' stmt ELSE stmt

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 41
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 7
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '@'       shift, and go to state 42

    expr  go to state 86


State 41

   43 expr: VARIABLE .
   60     | VARIABLE . '(' arguments ')'

    '('  shift, and go to state 87

    $default  reduce using rule 43 (expr)


State 42

   44 expr: '@' . VARIABLE

    VARIABLE  shift, and go to state 88


State 43

   30 output: PRINT expr .
   46 expr: expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '%' expr
   50     | expr . '/' expr
   51     | expr . '<' expr
   52     | expr . '>' expr
   53     | expr . GE expr
   54     | expr . LE expr
   55     | expr . NE expr
   56     | expr . EQ expr
   57     | expr . AND expr
   58     | expr . OR expr

    AND  shift, and go to state 66
    OR   shift, and go to state 67
    GE   shift, and go to state 68
    LE   shift, and go to state 69
    EQ   shift, and go to state 70
    NE   shift, and go to state 71
    '>'  shift, and go to state 72
    '<'  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '%'  shift, and go to state 78

    $default  reduce using rule 30 (output)


State 44

   26 input: READ VARIABLE .

    $default  reduce using rule 26 (input)


State 45

   14 stmt: VARIABLE . '=' expr ';'
   43 expr: VARIABLE .
   60     | VARIABLE . '(' arguments ')'

    '('  shift, and go to state 87
    '='  shift, and go to state 37

    $default  reduce using rule 43 (expr)


State 46

   18 stmt: DO stmt . WHILE '(' expr ')'

    WHILE  shift, and go to state 89


State 47

   10 stmt: BREAK ';' .

    $default  reduce using rule 10 (stmt)


State 48

   11 stmt: CONTINUE ';' .

    $default  reduce using rule 11 (stmt)


State 49

    9 stmt: RETURN expr . ';'
   46 expr: expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '%' expr
   50     | expr . '/' expr
   51     | expr . '<' expr
   52     | expr . '>' expr
   53     | expr . GE expr
   54     | expr . LE expr
   55     | expr . NE expr
   56     | expr . EQ expr
   57     | expr . AND expr
   58     | expr . OR expr

    AND  shift, and go to state 66
    OR   shift, and go to state 67
    GE   shift, and go to state 68
    LE   shift, and go to state 69
    EQ   shift, and go to state 70
    NE   shift, and go to state 71
    '>'  shift, and go to state 72
    '<'  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '%'  shift, and go to state 78
    ';'  shift, and go to state 90


State 50

   27 input: GETI '(' . arguments ')'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 41
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 7
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '@'       shift, and go to state 42

    arguments  go to state 91
    expr       go to state 82


State 51

   28 input: GETC '(' . arguments ')'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 41
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 7
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '@'       shift, and go to state 42

    arguments  go to state 92
    expr       go to state 82


State 52

   29 input: GETS '(' . arguments ')'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 41
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 7
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '@'       shift, and go to state 42

    arguments  go to state 93
    expr       go to state 82


State 53

   31 output: PUTI '(' . arguments ')'
   32       | PUTI '(' . STRING ',' arguments ')'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 41
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 94
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '@'       shift, and go to state 42

    arguments  go to state 95
    expr       go to state 82


State 54

   33 output: PUTC '(' . arguments ')'
   34       | PUTC '(' . STRING ',' arguments ')'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 41
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 96
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '@'       shift, and go to state 42

    arguments  go to state 97
    expr       go to state 82


State 55

   35 output: PUTS '(' . arguments ')'
   36       | PUTS '(' . STRING ',' arguments ')'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 41
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 98
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '@'       shift, and go to state 42

    arguments  go to state 99
    expr       go to state 82


State 56

   37 output: PUTI_ '(' . arguments ')'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 41
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 7
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '@'       shift, and go to state 42

    arguments  go to state 100
    expr       go to state 82


State 57

   38 output: PUTC_ '(' . arguments ')'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 41
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 7
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '@'       shift, and go to state 42

    arguments  go to state 101
    expr       go to state 82


State 58

   39 output: PUTS_ '(' . arguments ')'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 41
    CHAR      shift, and go to state 6
    STRING    shift, and go to state 7
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '@'       shift, and go to state 42

    arguments  go to state 102
    expr       go to state 82


State 59

   45 expr: '-' expr .
   46     | expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '%' expr
   50     | expr . '/' expr
   51     | expr . '<' expr
   52     | expr . '>' expr
   53     | expr . GE expr
   54     | expr . LE expr
   55     | expr . NE expr
   56     | expr . EQ expr
   57     | expr . AND expr
   58     | expr . OR expr

    $default  reduce using rule 45 (expr)


State 60

   46 expr: expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '%' expr
   50     | expr . '/' expr
   51     | expr . '<' expr
   52     | expr . '>' expr
   53     | expr . GE expr
   54     | expr . LE expr
   55     | expr . NE expr
   56     | expr . EQ expr
   57     | expr . AND expr
   58     | expr . OR expr
   59     | '(' expr . ')'

    AND  shift, and go to state 66
    OR   shift, and go to state 67
    GE   shift, and go to state 68
    LE   shift, and go to state 69
    EQ   shift, and go to state 70
    NE   shift, and go to state 71
    '>'  shift, and go to state 72
    '<'  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '%'  shift, and go to state 78
    ')'  shift, and go to state 103


State 61

   22 stmt_list: stmt .

    $default  reduce using rule 22 (stmt_list)


State 62

   21 stmt: '{' stmt_list . '}'
   23 stmt_list: stmt_list . stmt
